Reliability and architecture improvements (phases 1-3)
- Split OllamaConfig into OllamaProperties (@ConfigurationProperties) and
  OllamaConfig (@Configuration) to separate property binding from bean creation
- Add WebConfig to centralise CORS policy via WebMvcConfigurer; remove
  @CrossOrigin(origins="*") from controller; origins driven by
  cors.allowed-origins config property
- Move conversation history from a global ArrayList to HttpSession so each
  browser session gets an independent history; use Collections.synchronizedList
  for thread safety
- Add POST /api/chat/stream SSE endpoint backed by a Java 21 virtual thread;
  reads Ollama streaming JSON-lines and forwards tokens as SSE data events with
  a leading {"model":"..."} meta event and a "[DONE]" sentinel
- Fix spring.main.web-application-type=servlet to resolve WebMVC/WebFlux
  co-existence ambiguity; fix application.yaml indentation
- Add ChatControllerTest (@WebMvcTest) covering validation and routing;
  add OllamaServiceTest covering session isolation and defensive copy behaviour

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>